--- a/Abyss/Assets/Assets/Tests/Tests 1.asmdef
+++ b/Abyss/Assets/Assets/Tests/Tests 1.asmdef
@@ -12,7 +12,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "AbyssLibrary.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
